--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "datatables.net": "^2.3.2",
+    "datatables.net-bs5": "^2.3.2",
     "datatables.net-dt": "^2.3.2",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.0",
