--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datatables.net": "^2.3.2",
     "datatables.net-bs5": "^2.3.2",
     "datatables.net-dt": "^2.3.2",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
