--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.0",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.18",
+    "@types/leaflet-draw": "^1.0.12",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
