--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "datatables.net-dt": "^2.3.2",
     "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "rxjs": "~7.8.0",
