--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "@types/leaflet": "^1.9.18",
     "@types/leaflet-draw": "^1.0.12",
     "jasmine-core": "~5.7.0",
